--- a/front-end/src/components/css/widgetSm.css
+++ b/front-end/src/components/css/widgetSm.css
@@ -97,3 +97,46 @@
         font-size: 1.9rem !important;
     }
 }
+
+
+/* Mobile Devices :: Media Queries */
+@media screen and (min-width : 320px) and (max-width : 480px) {
+    .widgetSmTitle {
+        font-size: 1.5rem;
+        font-weight: 500;
+        border-bottom: 1.7px solid #cecece;
+    }
+
+    .widgetSmList {
+        margin: 10px 0 0 0;
+        padding: 0;
+        list-style: none;
+    }
+
+    .widgetSmListItem {
+        display: grid;
+        grid-template-columns: 2rem 2fr 2.5rem;
+        align-items: center;
+        gap: 10px;
+        margin-bottom: 10px;
+        font-weight: normal;
+    }
+
+    /* .widgetSmUser {
+    background-color: red;
+} */
+
+    .widgetSmUsername {
+        font-weight: normal;
+        font-size: 1.2rem;
+    }
+
+    .widgetSmButton {
+        color: #262626;
+        cursor: pointer;
+    }
+
+    .widgetSmIcon {
+        font-size: 1.3rem !important;
+    }
+}
