--- a/front-end/src/pages/Admin/Dashboard/dashboard.css
+++ b/front-end/src/pages/Admin/Dashboard/dashboard.css
@@ -11,3 +11,11 @@
         grid-template-columns: 1fr;
     }
 }
+
+/* Mobile Devices :: Media Queries */
+@media screen and (min-width : 320px) and (max-width : 480px) {
+    .homeWidgets {
+        width: 100%;
+        grid-template-columns: 1fr;
+    }
+}
