--- a/front-end/src/pages/Admin/Orders/orderList.css
+++ b/front-end/src/pages/Admin/Orders/orderList.css
@@ -1,5 +1,6 @@
 .OrdersContainer {
-    padding: 2rem 1.2rem 1rem 3rem;
+    width: 100%;
+    padding: 2rem 1.2rem 1rem 1rem;
     min-height: 98vh;
     position: relative;
 }
@@ -16,10 +17,10 @@
     margin-right: 5px;
 }
 
-.table .head_ {
+._Table_ .head_ {
     width: 100%;
     display: grid;
-    grid-template-columns: 10.5rem 6.7rem 7rem 8rem 11.3rem 8.8rem 4rem;
+    grid-template-columns: 10.5rem 6.7rem 7rem 7.9rem 10rem 14rem 4rem;
     border-bottom: 1px solid #d4d4d4;
     padding-bottom: 10px;
     margin-bottom: 10px;
@@ -28,7 +29,7 @@
 .tbody_ .tb_content_ {
     width: 100%;
     display: grid;
-    grid-template-columns: 8.8rem 5rem 6rem 6rem 9rem 11rem 4rem;
+    grid-template-columns: 8.8rem 5rem 6rem 6rem 9rem 12rem 4rem;
     gap: 1.5rem;
     margin-bottom: 10px;
     border-bottom: 1px solid #f5f5f5;
@@ -38,6 +39,10 @@
 .tbody_ .tb_content_ p {
     font-weight: normal;
     font-size: 1rem;
+}
+
+.small {
+    display: none;
 }
 
 ._Info_ {
@@ -71,4 +76,96 @@
 
 .userAction .trash {
     color: #ba1010;
+}
+
+
+/* Tablet Devices :: Media Queries */
+@media screen and (min-width : 768px) and (max-width : 1024px) {
+    .OrdersContainer {
+        width: 100%;
+        padding: 2rem 1rem 1rem 1rem;
+    }
+
+    .OrdersContainer h2 {
+        font-size: 2.1rem;
+    }
+
+    .Tablet_display {
+        display: none;
+    }
+
+    ._Table_ .head_ {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 10.5rem 8rem 9.6rem 11rem 4rem;
+        border-bottom: 1px solid #d4d4d4;
+        padding-bottom: 10px;
+        margin-bottom: 10px;
+    }
+
+
+    .tbody_ .tb_content_ {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 9rem 7rem 8rem 10rem 4rem;
+        gap: 1.5rem;
+        margin-bottom: 10px;
+        border-bottom: 1px solid #f5f5f5;
+        padding-bottom: 10px;
+    }
+
+    .big {
+        display: none;
+    }
+
+    .small {
+        display: block;
+    }
+
+    .tbody_ .tb_content_ p {
+        font-weight: normal;
+        font-size: 1.7rem;
+    }
+}
+
+
+/* Mobile Devices :: Media Queries */
+@media screen and (min-width : 320px) and (max-width : 480px) {
+    .OrdersContainer {
+        width: 100%;
+        padding: 2rem 1rem 1rem 1rem;
+    }
+
+    .Tablet_display {
+        display: none;
+    }
+
+    
+
+    .tbody_ .tb_content_ {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 7.5rem 6.5rem 4rem;
+        gap: 1.5rem;
+        margin-bottom: 10px;
+        border-bottom: 1px solid #f5f5f5;
+        padding-bottom: 10px;
+    }
+
+    .big {
+        display: none;
+    }
+
+    .small {
+        display: block;
+    }
+
+    .Mobile_display {
+        display: none;
+    }
+
+    .tbody_ .tb_content_ p {
+        font-weight: normal;
+        font-size: 1.25rem;
+    }
 }
