--- a/front-end/src/pages/Admin/Users/userList.css
+++ b/front-end/src/pages/Admin/Users/userList.css
@@ -1,5 +1,5 @@
 .Users_Container {
-    padding: 2rem 1.2rem 1rem 3rem;
+    padding: 2rem 1.2rem 1rem 1rem;
 }
 
 .Users_Container h2 {
@@ -8,6 +8,14 @@
     margin-bottom: 20px;
     display: flex;
     align-items: center;
+}
+
+.tablet_view_ {
+    display: none;
+}
+
+.mobile_view_ {
+    display: none;
 }
 
 .table .head {
@@ -43,4 +51,111 @@
 
 .userAction .trash {
     color: #ba1010;
+}
+
+
+/* Tablet Devices :: Media Queries */
+@media screen and (min-width : 768px) and (max-width : 1024px) {
+    .Users_Container {
+        padding: 2rem 1rem 1rem 1.5rem;
+    }
+
+    .Users_Container h2 {
+        font-weight: 550;
+        font-size: 2rem;
+    }
+
+
+    .table {
+        display: none;
+    }
+
+    .tablet_view_ {
+        width: 100%;
+        display: block;
+    }
+
+    .tablet_view_ .head {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 15.6rem 11rem 10rem 5rem;
+        border-bottom: 1px solid #d4d4d4;
+        padding-bottom: 10px;
+    }
+
+    .tbody .tb_content {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 14rem 9rem 7rem 6rem;
+        gap: 2rem;
+    }
+
+    .tbody .tb_content p {
+        font-weight: normal;
+        font-size: 1.5rem;
+    }
+
+
+    .userAction .icon {
+        font-size: 1.8rem !important;
+        cursor: pointer;
+    }
+}
+
+
+/* Mobile Devices :: Media Queries */
+@media screen and (min-width : 320px) and (max-width : 480px) {
+    .Users_Container {
+        width: 100%;
+        padding: 10px 1rem 1rem 1rem;
+    }
+
+    .Users_Container h2 {
+        font-weight: 550;
+        font-size: 1.7rem;
+    }
+
+
+    .table {
+        display: none;
+    }
+
+    .tablet_view_ {
+        display: none;
+    }
+
+    .mobile_view_ {
+        width: 100%;
+        display: block;
+    }
+
+    .mobile_view_ .head {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 16rem 5rem;
+        border-bottom: 1px solid #d4d4d4;
+        padding-bottom: 10px;
+    }
+
+    .mobile_view_ .head p {
+        font-size: 1.4rem;
+    }
+
+    .tbody .tb_content {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 14rem  4rem;
+        gap: 2rem;
+    }
+
+    .tbody .tb_content p {
+        font-weight: normal;
+        font-size: 1.4rem;
+    }
+
+
+    .userAction .icon {
+        font-size: 1.4rem !important;
+        cursor: pointer;
+    }
 }
