--- a/front-end/src/pages/Cart/cart.css
+++ b/front-end/src/pages/Cart/cart.css
@@ -217,6 +217,17 @@
 
 /* Tablet Devices :: Media Queries */
 @media screen and (min-width : 768px) and (max-width : 1024px) {
+    .empty {
+        margin-top: 0;
+        padding-top: 2rem;
+        /* background-color: red; */
+    }
+
+    .empty span {
+        font-size: 1.5rem;
+        font-weight: 550;
+    }
+    
     .cart_container {
         padding: 2rem 0rem;
     }
@@ -317,6 +328,21 @@
 
 /* Mobile Devices :: Media Queries */
 @media screen and (min-width : 320px) and (max-width : 480px) {
+    .empty {
+        margin-top: 0;
+        padding-top: 2rem;
+        /* background-color: red; */
+    }
+
+    .empty span {
+        font-size: 1.3rem;
+    }
+
+    .empty_cart {
+        width: 30%;
+        height: 30%;
+    }
+    
     .cart_head {
         flex-direction: column-reverse;
         align-items: flex-start;
