--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -51,6 +51,36 @@ body {
 }
 
 
+.CircularLoader {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+}
+
+.ToggleBtn {
+  display: block;
+  position: fixed;
+  bottom: 1.5rem;
+  right: 10px;
+  cursor: pointer;
+  z-index: 1000;
+  width: 2rem;
+  height: 2rem;
+  background-color: #460f5e;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ToggleBtn .icon {
+  /* background-color: #033040; */
+  color: white;
+  font-size: 1rem;
+}
 
 
 /* Tablet Devices :: Media Queries */
@@ -68,6 +98,19 @@ body {
     flex: 4;
     min-height: 100%;
     padding: 1rem 5px 1rem 0;
+  }
+  .ToggleBtn {
+    /* bottom: 7rem; */
+    /* right: 12px; */
+    z-index: 1000;
+    width: 3.7rem;
+    height: 3.7rem;
+  }
+
+  .ToggleBtn .icon {
+    /* background-color: #033040; */
+    color: white;
+    font-size: 2rem;
   }
 
 }
@@ -94,5 +137,19 @@ body {
     padding: 2rem 5px 1rem 0;
     /* background-color: red; */
     overflow: hidden;
+  }
+
+  .ToggleBtn {
+    /* bottom: 7rem; */
+    /* right: 20px; */
+    /* z-index: 1000; */
+    width: 3.1rem;
+    height: 3.1rem;
+  }
+
+  .ToggleBtn .icon {
+    /* background-color: #033040; */
+    color: white;
+    font-size: 1.7rem;
   }
 }
